syntax = "proto3";

package crud.v1;

option go_package = "./crudpb";

message User {
  int64 id = 1;
  string login = 2;
  string first_name = 3;
  string last_name = 4;
  string password = 5;
  string role = 6;
}

message UserCollection { repeated User users = 1; }

message ResourceRecord {
  int64 id = 1;
  string domain = 2;
  string data = 3;
  string type = 4;
  string class = 5;
  int32 time_to_live = 6;
}

message ResourceRecordCollection { repeated ResourceRecord records = 1; }

message Login {
  string username = 1;
  string password = 2;
}

message Register {
  string login = 1;
  string first_name = 2;
  string last_name = 3;
  string password = 4;
  string role = 5;
}
